--- a/src/style.css
+++ b/src/style.css
@@ -335,7 +335,7 @@ button:focus {
 .home-about-body {
   padding-top: 50px;
   font-size: 1.2em !important;
-  text-align: left;
+  text-align: justify;
 }
 
 .home-about-social {
